added tests and performed some hygiene stuff